--- a/Código Fonte/Android/app/src/main/res/layout/activity_player.xml
+++ b/Código Fonte/Android/app/src/main/res/layout/activity_player.xml
@@ -1,45 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:id="@+id/player_controls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginBottom="12dp"
         android:layout_alignParentBottom="true">
 
-        <Button
+        <ImageButton
             android:id="@+id/previous"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="previous" />
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_weight="0"
+            android:layout_marginBottom="6dp"
+            android:src="@drawable/ic_previous"
+            style="@style/Base.Widget.AppCompat.ActionButton"/>
 
-        <Button
+        <com.melnykov.fab.FloatingActionButton
             android:id="@+id/play_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="play" />
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_weight="0"
+            fab:fab_shadow="true"
+            android:src="@drawable/ic_play"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginStart="32dp"
+            fab:fab_colorNormal="@color/colorRipple"
+            fab:fab_colorPressed="@color/colorRippleSelected"
+            fab:fab_colorRipple="@color/colorRippleAccent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/next"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_weight="0"
+            android:src="@drawable/ic_next"
+            android:layout_marginBottom="6dp"
+            style="@style/Base.Widget.AppCompat.ActionButton" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_above="@+id/player_seek_bar"
+        android:src="@drawable/album5"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginBottom="16dp"
+        android:background="#b4000000"
+        android:layout_above="@+id/player_controls" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/player_controls">
+
+        <TextView
+            android:id="@+id/song_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="next" />
-    </LinearLayout>
+            android:layout_marginTop="6dp"
+            android:textSize="16sp"
+            android:textColor="#FF9800"
+            android:text="Song name"/>
+
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/song_name"
+            android:textColor="#afffffff"
+            android:textSize="14sp"
+            android:text="artist name"/>
+    </RelativeLayout>
 
     <SeekBar
         android:id="@+id/player_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-16dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         android:layout_above="@id/player_controls" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/player_seek_bar" />
+
 </RelativeLayout>
