--- a/Código Fonte/Android/app/src/main/res/layout/activity_home.xml
+++ b/Código Fonte/Android/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.sevenbeats.mvc.view.HomeActivity">
+    tools:context="br.com.sevenbeats.mvc.views.HomeActivity">
 
     <Button
         android:id="@+id/player"
