--- a/Código Fonte/Android/app/src/main/res/layout/activity_home.xml
+++ b/Código Fonte/Android/app/src/main/res/layout/activity_home.xml
@@ -1,16 +1,44 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.sevenbeats.mvc.HomeActivity">
+    android:orientation="vertical"
+    tools:context="br.com.sevenbeats.presentation.home.SearchActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/home_search_button"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:src="@drawable/ic_play"
+            android:layout_alignParentEnd="true" />
+
+        <EditText
+            android:id="@+id/home_search_field"
+            android:layout_width="match_parent"
+            android:hint="@string/home_search_hint"
+            android:paddingEnd="12dp"
+            android:paddingStart="12dp"
+            android:layout_height="52dp"
+            android:layout_toStartOf="@id/home_search_button" />
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/home_list"
+        android:layout_marginBottom="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/player"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:text="Go to player"/>
 
-
-</RelativeLayout>
+</LinearLayout>
