--- a/Código Fonte/Android/app/src/main/res/layout/activity_search.xml
+++ b/Código Fonte/Android/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="br.com.sevenbeats.presentation.home.SearchActivity">
+    tools:context="br.com.sevenbeats.presentation.search.SearchActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/home_list"
+        android:id="@+id/search_list"
         android:layout_marginBottom="36dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
